# sgp

./: .gitignore  README.md  SGP.pu  __init__.py  app.py  cliente.py  login.py  makefile  models.py  package.json  populadb.py  postcss.config.js  projeto.py  pyproject.toml  reademe.md  req.txt  schema.py  test.db  teste.py
migrations/versions/: 4c1f289d60ed_.py
sgp/: Login.py  __init__.py  admin.py  app.py  cliente.py  forms.py  login.py  models.py  projeto.py  schema.py  test.db
sgp/static/: base.css  busca.css  cliente.css  devolutivas.css  entrega.css  entrega.scss  forms.css  index.css  index_tela.css  javascript.js  login.css  novo.css
sgp/static/css/: nuvens.css
sgp/static/imgs/: quadro.xcf
sgp/static/js/: busca.js  cliente.js  entrega.js  novo.js
sgp/templates/: adm.html  busca.html  cadastrar.html  cliente.html  cliente_nome  components.j2  create.html  datatable.html  detalhado.html  detalhes.html  devolutivas.html  entrega.html  index copy 2.html  index copy.html  index.html  layout.html  list copy.html  login.html  novo.html  novo_cliente.html  novo_projeto.html  procura.html  procura2.html  resultado.html
sgp/templates/admin/: index.html  master.html
sgp/templates/modal/: create.html
templates/: busca.html  cadastrar.html  cliente.html  detalhes.html  devolutivas.html  entrega.html  index-componentizado.html  index.html  layout.html  login.html  novo.html
tests/: test_sgp.py
